--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ apscheduler==3.10.1
 asyncio==3.4.3
 beautifulsoup4==4.12.2
 bing_image_downloader==1.1.2
+config==0.4.0
 bleach==6.0.0
 bs4==0.0.1
 cachetools==5.3.0
