--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ geopy==2.3.0
 gpytranslate==1.5.1
 hachoir==3.2.0
 html2text==2020.1.16
+Flask==2.0.2
+pytube
 jikanpy==4.3.2
 lxml==4.9.2
 markdown2==2.4.8
@@ -32,6 +34,7 @@ pydictionary==2.0.1
 pykeyboard==0.1.5
 pynewtonmath==1.0.1
 youtube-dl==2021.06.06
+pytelegrambotapi==4.0.0
 numpy==1.22.0
 python-dotenv==0.19.1
 pytesseract==0.3.8
